--- a/MDK-ARM/RTC_UART/RTC_UART.build_log.htm
+++ b/MDK-ARM/RTC_UART/RTC_UART.build_log.htm
@@ -27,51 +27,34 @@ Project File Date:  11/23/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'RTC_UART'
-assembling startup_stm32f767xx.s...
-compiling rtc.c...
-compiling usart.c...
-compiling stm32f7xx_it.c...
-compiling stm32f7xx_hal_msp.c...
-compiling gpio.c...
-compiling stm32f7xx_hal_cortex.c...
 compiling main.c...
-../Src/main.c(97): warning:  #186-D: pointless comparison of unsigned integer with zero
+../Src/main.c(75): warning:  #1295-D: Deprecated declaration get_timer - give arg types
+  void get_timer();
+../Src/main.c(103): warning:  #186-D: pointless comparison of unsigned integer with zero
   		if(setHours < 0x0) {
-../Src/main.c(113): warning:  #186-D: pointless comparison of unsigned integer with zero
+../Src/main.c(119): warning:  #186-D: pointless comparison of unsigned integer with zero
   		if(setMinutes < 0x0){
-../Src/main.c(295): warning:  #223-D: function "sprintf" declared implicitly
+../Src/main.c(288): warning:  #186-D: pointless comparison of unsigned integer with zero
+  		if(timer_minute <0 ) {
+../Src/main.c(303): warning:  #186-D: pointless comparison of unsigned integer with zero
+  		if(timer_second <0 ) {
+../Src/main.c(326): warning:  #223-D: function "sprintf" declared implicitly
+  		sprintf(timerbuff, "%02d : %02d\n\r" , backup_timer_minute, backup_timer_second);
+../Src/main.c(335): warning:  #223-D: function "sprintf" declared implicitly
+  	sprintf(timerbuff, "%02d : %02d\r" , timer_minute, timer_second);
+../Src/main.c(352): warning:  #223-D: function "sprintf" declared implicitly
   	sprintf(timebuff, "%02d:%02d:%02d\n\r", gTime.Hours , gTime.Minutes, gTime.Seconds);
-../Src/main.c(309): warning:  #188-D: enumerated type mixed with another type
+../Src/main.c(366): warning:  #188-D: enumerated type mixed with another type
   		HAL_GPIO_WritePin(GPIOB, GPIO_PIN_0, 1);
-../Src/main.c(315): warning:  #188-D: enumerated type mixed with another type
+../Src/main.c(372): warning:  #188-D: enumerated type mixed with another type
   	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_0, 0);
-../Src/main.c(388): warning:  #223-D: function "sprintf" declared implicitly
+../Src/main.c(479): warning:  #223-D: function "sprintf" declared implicitly
   			sprintf(setbuff, "set : %d\n\r", set);
-../Src/main.c: 6 warnings, 0 errors
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_hal_uart_ex.c...
-compiling stm32f7xx_hal_rtc.c...
-compiling stm32f7xx_hal_rtc_ex.c...
-compiling stm32f7xx_hal_uart.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling system_stm32f7xx.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal_exti.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal_i2c.c...
+../Src/main.c: 11 warnings, 0 errors
 linking...
-Program Size: Code=12092 RO-data=560 RW-data=36 ZI-data=1220  
+Program Size: Code=12988 RO-data=560 RW-data=52 ZI-data=1236  
 FromELF: creating hex file...
-"RTC_UART\RTC_UART.axf" - 0 Error(s), 6 Warning(s).
+"RTC_UART\RTC_UART.axf" - 0 Error(s), 11 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -94,7 +77,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:01:05
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
