--- a/MDK-ARM/RTC_UART/RTC_UART.build_log.htm
+++ b/MDK-ARM/RTC_UART/RTC_UART.build_log.htm
@@ -22,39 +22,45 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 C:\Users\60010357\Desktop\MAD\Assignment file\test_RTCxUART\RTC_UART\MDK-ARM\RTC_UART.uvprojx
-Project File Date:  11/23/2019
+Project File Date:  11/24/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'RTC_UART'
 compiling main.c...
-../Src/main.c(75): warning:  #1295-D: Deprecated declaration get_timer - give arg types
+../Src/main.c(78): warning:  #1295-D: Deprecated declaration get_timer - give arg types
   void get_timer();
-../Src/main.c(103): warning:  #186-D: pointless comparison of unsigned integer with zero
+../Src/main.c(106): warning:  #186-D: pointless comparison of unsigned integer with zero
   		if(setHours < 0x0) {
-../Src/main.c(119): warning:  #186-D: pointless comparison of unsigned integer with zero
+../Src/main.c(122): warning:  #186-D: pointless comparison of unsigned integer with zero
   		if(setMinutes < 0x0){
-../Src/main.c(288): warning:  #186-D: pointless comparison of unsigned integer with zero
+../Src/main.c(217): warning:  #186-D: pointless comparison of unsigned integer with zero
+  		if(set_alarm_Hours < 0x0) {
+../Src/main.c(233): warning:  #186-D: pointless comparison of unsigned integer with zero
+  		if(set_alarm_minute < 0x0){
+../Src/main.c(324): warning:  #186-D: pointless comparison of unsigned integer with zero
   		if(timer_minute <0 ) {
-../Src/main.c(303): warning:  #186-D: pointless comparison of unsigned integer with zero
+../Src/main.c(339): warning:  #186-D: pointless comparison of unsigned integer with zero
   		if(timer_second <0 ) {
-../Src/main.c(326): warning:  #223-D: function "sprintf" declared implicitly
+../Src/main.c(362): warning:  #223-D: function "sprintf" declared implicitly
   		sprintf(timerbuff, "%02d : %02d\n\r" , backup_timer_minute, backup_timer_second);
-../Src/main.c(335): warning:  #223-D: function "sprintf" declared implicitly
+../Src/main.c(371): warning:  #223-D: function "sprintf" declared implicitly
   	sprintf(timerbuff, "%02d : %02d\r" , timer_minute, timer_second);
-../Src/main.c(352): warning:  #223-D: function "sprintf" declared implicitly
+../Src/main.c(388): warning:  #223-D: function "sprintf" declared implicitly
   	sprintf(timebuff, "%02d:%02d:%02d\n\r", gTime.Hours , gTime.Minutes, gTime.Seconds);
-../Src/main.c(366): warning:  #188-D: enumerated type mixed with another type
+../Src/main.c(402): warning:  #188-D: enumerated type mixed with another type
   		HAL_GPIO_WritePin(GPIOB, GPIO_PIN_0, 1);
-../Src/main.c(372): warning:  #188-D: enumerated type mixed with another type
+../Src/main.c(408): warning:  #188-D: enumerated type mixed with another type
   	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_0, 0);
-../Src/main.c(479): warning:  #223-D: function "sprintf" declared implicitly
+../Src/main.c(521): warning:  #223-D: function "sprintf" declared implicitly
   			sprintf(setbuff, "set : %d\n\r", set);
-../Src/main.c: 11 warnings, 0 errors
+../Src/main.c(531): warning:  #223-D: function "sprintf" declared implicitly
+  			sprintf(setbuff, "set : %d\n\r", set);
+../Src/main.c: 14 warnings, 0 errors
 linking...
-Program Size: Code=12988 RO-data=560 RW-data=52 ZI-data=1236  
+Program Size: Code=13592 RO-data=560 RW-data=56 ZI-data=1248  
 FromELF: creating hex file...
-"RTC_UART\RTC_UART.axf" - 0 Error(s), 11 Warning(s).
+"RTC_UART\RTC_UART.axf" - 0 Error(s), 14 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -77,7 +83,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
